--- a/example/index.html
+++ b/example/index.html
@@ -59,6 +59,11 @@
         </div>
       </div>
     </div>
+
+    <div>
+      <textarea id="log" style="width:100%"></textarea>
+    </div>
+
     <script src="./sample.ts" type="module"></script>
     <!-- for icons -->
     <script src="https://kit.fontawesome.com/7c1c4c7e9c.js" crossorigin="anonymous"></script>
